--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity2Activity"
+            android:name=".MainActivity2"
             android:label="@string/title_activity_main_activity2" >
         </activity>
         <activity
-            android:name=".MainActivity3Activity"
+            android:name=".MainActivity3"
             android:label="@string/title_activity_main_activity3" >
         </activity>
     </application>
